# nrc-event-scraper

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: scrape.yml
data/: scraper.db
data/events/: 2000.jsonl  2001.jsonl  2002.jsonl  2003.jsonl  2004.jsonl  2005.jsonl  2006.jsonl  2007.jsonl  2008.jsonl  2009.jsonl  2010.jsonl  2011.jsonl  2012.jsonl  2013.jsonl  2014.jsonl  2015.jsonl  2016.jsonl  2017.jsonl  2018.jsonl  2019.jsonl  2020.jsonl  2021.jsonl  2022.jsonl  2023.jsonl  2024.jsonl  2025.jsonl  2026.jsonl
scripts/: jsonl_to_xlsx.py
src/nrc_event_scraper/: __init__.py  cli.py  config.py  db.py  models.py  orchestrator.py
src/nrc_event_scraper/parser/: common.py  detect.py  legacy_parser.py  modern_parser.py
src/nrc_event_scraper/scraper/: client.py  index_scraper.py
src/nrc_event_scraper/storage/: html_archive.py  jsonl_writer.py
tests/: conftest.py  test_client.py  test_db.py  test_detect.py  test_index_scraper.py  test_legacy_parser.py  test_models.py  test_modern_parser.py  test_orchestrator.py  test_storage.py
tests/fixtures/: legacy_multi_event.html  modern_multi_event.html  modern_no_events.html
