[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nrc-event-scraper"
version = "0.1.0"
description = "Scraper for NRC Event Notification Reports (1999–present)"
requires-python = ">=3.11"
dependencies = [
    "curl_cffi>=0.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tenacity>=9.0",
    "click>=8.1",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
dashboard = [
    "streamlit>=1.35",
    "pandas>=2.2",
    "plotly>=5.22",
    "wordcloud>=1.9",
    "matplotlib>=3.9",
    "openpyxl>=3.1",
]

[project.scripts]
nrc-scraper = "nrc_event_scraper.cli:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
